  * seeded-in-ubuntu Inform the user when we couldn't determine binary
    packages built by a source package, as it most recently FTBFS.
  * requestbackport:
    - Avoid duplicate Reverse-Build-Deps when sources build binaries of the
      same name.
    - Explain that backports aren't to fix bugs.
  * sponsor-patch: Don't fall over bugs targetted at the development release
    (LP: #936014)

  [ Benjamin Drung ]
  * seeded-in-ubuntu: State in error message that it takes a source package.
    (LP: #1029155)
  * sponsor-patch: Fix crash if Debian patch contains a slash.

 -- Stefano Rivera <stefanor@ubuntu.com>  Wed, 18 Jul 2012 12:47:01 +0200

ubuntu-dev-tools (0.143) unstable; urgency=low

  [ Iain Lane ]
  * backportpackage: Fix filenames searched when looking for existing
    .orig.tar.foo files (to determine if we need to upload it again or not).
    (LP: #1007908)
  * backportpackage: Unset DEBEMAIL when building source package. Fixes error
    when building backports for packages with no Ubuntu changes.
    (LP: #1007042)

  [ Mathieu Trudel-Lapierre ]
  * mk-sbuild: use and update messages to suggest using the source:$chroot way
    of referring to source chroots instead of $chroot-source; since the latter
    does not work with btrfs snapshot-based chroots. (LP: #1014669)

  [ Lars Düsing ]
  * Corrected brackets in man-page for sponsor-patch.

  [ Stefano Rivera ]
  * pbuilder-dist: Don't try to enable -updates for the current codename
    referring to Debian testing, either (LP: #1011870)
  * Correct spelling mistakes in package description, thanks Logan Rosen for
    the patch (Closes: #678245)
  * Correct metavar for --mirror in backportpackage (LP: #999727)
  * submittodebian: Explitictly UTF-8 encode the bug body (LP: #1005834)
  * backportpackage.1: Document --key and --dont-sign (LP: #1007564)
  * seeded-in-ubuntu: Catch errors in parsing data, and don't keep unreadable
    data cached (LP: #1008783)