@@ -17,6 +17,8 @@ ubuntu-dev-tools (0.144) UNRELEASED; urgency=low
     - Explain that backports aren't to fix bugs.
   * sponsor-patch: Don't fall over bugs targetted at the development release
     (LP: #936014)
+  * ubuntutools.question: Catch EOF and SIGINT on all input and bail out.
+    (LP: #1037488)
 
   [ Benjamin Drung ]
   * seeded-in-ubuntu: State in error message that it takes a source package.
